--- a/assets/sprites.css
+++ b/assets/sprites.css
@@ -38,7 +38,7 @@
    width: 19px;
    height: 23px;
 }
-.walking-ne2 {
+.walking_ne2 {
    background: url('spritesheet.png') no-repeat -88px -25px;
    width: 19px;
    height: 23px;
