--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 #psyduck {
   image-rendering: pixelated; /* makes sprites sharp */
   position: absolute;         /* lets you move it later */
+  transition: left 0.1s ease, top 0.1s ease;
 }
